# api-fittrack

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml
app/: main.py
app/api/dependencies/: auth.py  database.py
app/api/routes/: analysis.py  auth.py
app/core/: config.py  exceptions.py  security.py
app/db/: database.py
app/db/migrations/: env.py
app/db/migrations/versions/: f25cd2d59e84_create_users_and_analyses_tables.py
app/models/orm/: analysis.py  user.py
app/models/schemas/: analysis.py  auth.py  common.py
app/modules/calibration/: service.py
app/modules/estimation/: body_indices.py  deurenberg.py  engine.py  navy.py
app/modules/measurements/: service.py
app/modules/pose/: service.py
tests/unit/: test_estimation.py
