[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fittrack"
version = "0.1.0"
description = "Body composition analysis through computer vision"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Lucas" }]

[project.dependencies]
fastapi = ">=0.110.0"
uvicorn = { extras = ["standard"], version = ">=0.29.0" }
pydantic = ">=2.0.0"
pydantic-settings = ">=2.0.0"
opencv-python = ">=4.9.0"
mediapipe = ">=0.10.0"
torch = ">=2.2.0"
torchvision = ">=0.17.0"
scikit-learn = ">=1.4.0"
numpy = ">=1.26.0"
pillow = ">=10.0.0"
python-multipart = ">=0.0.9"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[tool.black]
line-length = 80
target-version = ["py311"]

[tool.ruff]
line-length = 80
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]